fix click on mobile menu

--- a/src/app/header-responsive/header-responsive.component.scss
+++ b/src/app/header-responsive/header-responsive.component.scss
@@ -197,5 +197,4 @@
   color: #183553;
   font-size: 1.2rem;
   font-weight: bold;
-  padding-top: 2rem;
 }
